# tauri

./: .env.example  .gitignore  LICENSE  Makefile  README.md  codialog-docker-tests.md  codialog-minimal.md  codialog-missing-files.md  codialog-monitoring.md  docker-compose.bitwarden.yml  package.json  raport.md  tauri-config.md  todo.md
capabilities/: default.json
scripts/: job_application.codialog  linkedin_apply.codialog  registration_form.codialog  upload_cv.codialog
scripts/init/: docker-setup.sh  setup.sh
scripts/makefile-scripts/: build-release.sh  build.sh  bw-status.sh  bw-sync.sh  bw-unlock.sh  clean.sh  coverage.sh  create-script.sh  data-backup.sh  data-clean.sh  db-backup.sh  db-migrate.sh  db-seed.sh  debug.sh  dev.sh  docker-clean.sh  docker-down.sh  docker-logs.sh  docker-status.sh  docker-up.sh  docs-api.sh  docs.sh  env-check.sh  env-template.sh  install.sh  maintenance-mode.sh  maintenance-off.sh  monitor.sh  perf-test.sh  serve-docs.sh  setup.sh  status.sh  test-bench.sh  test-clean.sh  test-coverage.sh  test-e2e.sh  test-integration.sh  test-unit.sh  test-watch.sh  test.sh  (+1 more)
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: bitwarden.rs  cdp.rs  llm.rs  logging.rs  main.rs  session.rs  tagui.rs
src-tauri/src/tests/: common.rs  integration_tests.rs  mod.rs  test_bitwarden.rs  test_database.rs  test_llm.rs  test_logging.rs  test_session.rs
