[package]
name = "codialog"
version = "0.1.0"
edition = "2021"
authors = ["Tom Sapletta <info@softreck.dev>"]
description = "Intelligent CV automation and form filling assistant"
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.4"
chromiumoxide = { version = "0.5", features = ["tokio-runtime"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.tauri-plugin-shell]
version = "2.0.0"

[[bin]]
name = "codialog"
path = "src/main.rs"

[features]
default = []
